add_library(util OBJECT)
crashpad_set_props(util)

target_compile_definitions(util PRIVATE -DZLIB_CONST)
target_link_libraries(util PRIVATE ZlibInterface)

target_sources(util
  PRIVATE
  file/delimited_file_reader.cc
  file/delimited_file_reader.h
  file/directory_reader.h
  file/file_io.cc
  file/file_io.h
  file/file_reader.cc
  file/file_reader.h
  file/file_seeker.cc
  file/file_seeker.h
  file/file_writer.cc
  file/file_writer.h
  file/filesystem.h
  file/output_stream_file_writer.cc
  file/output_stream_file_writer.h
  file/scoped_remove_file.cc
  file/scoped_remove_file.h
  file/string_file.cc
  file/string_file.h
  misc/address_sanitizer.h
  misc/address_types.h
  misc/arraysize.h
  misc/as_underlying_type.h
  misc/capture_context.h
  misc/clock.h
  misc/elf_note_types.h
  misc/from_pointer_cast.h
  misc/implicit_cast.h
  misc/initialization_state.h
  misc/initialization_state_dcheck.cc
  misc/initialization_state_dcheck.h
  misc/lexing.cc
  misc/lexing.h
  misc/memory_sanitizer.h
  misc/metrics.cc
  misc/metrics.h
  misc/paths.h
  misc/pdb_structures.cc
  misc/pdb_structures.h
  misc/random_string.cc
  misc/random_string.h
  misc/range_set.cc
  misc/range_set.h
  misc/reinterpret_bytes.cc
  misc/reinterpret_bytes.h
  misc/scoped_forbid_return.cc
  misc/scoped_forbid_return.h
  misc/symbolic_constants_common.h
  misc/time.cc
  misc/time.h
  misc/tri_state.h
  misc/uuid.cc
  misc/uuid.h
  misc/zlib.cc
  misc/zlib.h
  net/http_body.cc
  net/http_body.h
  net/http_body_gzip.cc
  net/http_body_gzip.h
  net/http_headers.h
  net/http_multipart_builder.cc
  net/http_multipart_builder.h
  net/http_transport.cc
  net/http_transport.h
  net/url.cc
  net/url.h
  numeric/checked_address_range.cc
  numeric/checked_address_range.h
  numeric/checked_range.h
  numeric/checked_vm_address_range.h
  numeric/in_range_cast.h
  numeric/int128.h
  numeric/safe_assignment.h
  process/process_id.h
  process/process_memory.cc
  process/process_memory.h
  process/process_memory_native.h
  process/process_memory_range.cc
  process/process_memory_range.h
  stdlib/aligned_allocator.cc
  stdlib/aligned_allocator.h
  stdlib/map_insert.h
  stdlib/objc.h
  stdlib/string_number_conversion.cc
  stdlib/string_number_conversion.h
  stdlib/strlcpy.cc
  stdlib/strlcpy.h
  stdlib/strnlen.cc
  stdlib/strnlen.h
  stdlib/thread_safe_vector.h
  stream/base94_output_stream.cc
  stream/base94_output_stream.h
  stream/file_encoder.cc
  stream/file_encoder.h
  stream/file_output_stream.cc
  stream/file_output_stream.h
  stream/log_output_stream.cc
  stream/log_output_stream.h
  stream/output_stream_interface.h
  stream/zlib_output_stream.cc
  stream/zlib_output_stream.h
  string/split_string.cc
  string/split_string.h
  synchronization/semaphore.h
  thread/stoppable.h
  thread/thread.cc
  thread/thread.h
  thread/thread_log_messages.cc
  thread/thread_log_messages.h
  thread/worker_thread.cc
  thread/worker_thread.h
)

if(APPLE)
  target_sources(util
    PRIVATE
    mac/checked_mach_address_range.h
    mac/launchd.h
    mac/launchd.mm
    mac/mac_util.cc
    mac/mac_util.h
    mac/service_management.cc
    mac/service_management.h
    mac/xattr.cc
    mac/xattr.h
    mach/child_port_handshake.cc
    mach/child_port_handshake.h
    mach/child_port_server.cc
    mach/child_port_server.h
    mach/child_port_types.h
    mach/composite_mach_message_server.cc
    mach/composite_mach_message_server.h
    mach/exc_client_variants.cc
    mach/exc_client_variants.h
    mach/exc_server_variants.cc
    mach/exc_server_variants.h
    mach/exception_behaviors.cc
    mach/exception_behaviors.h
    mach/exception_ports.cc
    mach/exception_ports.h
    mach/exception_types.cc
    mach/exception_types.h
    mach/mach_extensions.cc
    mach/mach_extensions.h
    mach/mach_message.cc
    mach/mach_message.h
    mach/mach_message_server.cc
    mach/mach_message_server.h
    mach/notify_server.cc
    mach/notify_server.h
    mach/scoped_task_suspend.cc
    mach/scoped_task_suspend.h
    mach/symbolic_constants_mach.cc
    mach/symbolic_constants_mach.h
    mach/task_for_pid.cc
    mach/task_for_pid.h
    misc/capture_context_mac.S
    misc/clock_mac.cc
    misc/paths_mac.cc
    net/http_transport_mac.mm
    posix/process_info_mac.cc
    process/process_memory_mac.cc
    process/process_memory_mac.h
    synchronization/semaphore_mac.cc
  )

  macro(MIG DEF_FILE)
    get_filename_component(DEF_FILENAME ${DEF_FILE} NAME_WE)
    add_custom_command(
      OUTPUT
        mach/${DEF_FILENAME}User.c
        mach/${DEF_FILENAME}Server.c
        mach/${DEF_FILENAME}.h
        mach/${DEF_FILENAME}Server.h
      DEPENDS
        ${DEF_FILE}
      COMMAND
        cmake -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/mach
      COMMAND
        ${Python2_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/mach/mig.py ${DEF_FILE} mach/${DEF_FILENAME}User.c mach/${DEF_FILENAME}Server.c mach/${DEF_FILENAME}.h mach/${DEF_FILENAME}Server.h --include ${CMAKE_SOURCE_DIR}/compat/mac
    )
    target_sources(util
      PRIVATE
      mach/${DEF_FILENAME}User.c
      mach/${DEF_FILENAME}Server.c
    )
  endmacro()

  target_include_directories(util PRIVATE ${CMAKE_BINARY_DIR})

  set(DEF_ROOT ${CMAKE_OSX_SYSROOT}/usr/include/mach)
  MIG(${DEF_ROOT}/exc.defs)
  MIG(${DEF_ROOT}/mach_exc.defs)
  MIG(${DEF_ROOT}/notify.defs)
  MIG(${CMAKE_CURRENT_SOURCE_DIR}/mach/child_port.defs)
endif()

if(UNIX)
  target_sources(util
    PRIVATE
    file/directory_reader_posix.cc
    file/file_io_posix.cc
    file/filesystem_posix.cc
    misc/clock_posix.cc
    posix/close_stdio.cc
    posix/close_stdio.h
    posix/scoped_dir.cc
    posix/scoped_dir.h
    posix/scoped_mmap.cc
    posix/scoped_mmap.h
    posix/signals.cc
    posix/signals.h
    synchronization/semaphore_posix.cc
    thread/thread_posix.cc
    posix/close_multiple.cc
    posix/close_multiple.h
    posix/double_fork_and_exec.cc
    posix/double_fork_and_exec.h
    posix/drop_privileges.cc
    posix/drop_privileges.h
    posix/process_info.h
    posix/symbolic_constants_posix.cc
    posix/symbolic_constants_posix.h
  )
endif()

if(UNIX AND NOT APPLE)
  target_sources(util
    PRIVATE
    linux/address_types.h
    linux/auxiliary_vector.cc
    linux/auxiliary_vector.h
    linux/checked_linux_address_range.h
    linux/direct_ptrace_connection.cc
    linux/direct_ptrace_connection.h
    linux/exception_handler_client.cc
    linux/exception_handler_client.h
    linux/exception_handler_protocol.cc
    linux/exception_handler_protocol.h
    linux/exception_information.h
    linux/memory_map.cc
    linux/memory_map.h
    linux/proc_stat_reader.cc
    linux/proc_stat_reader.h
    linux/proc_task_reader.cc
    linux/proc_task_reader.h
    linux/ptrace_broker.cc
    linux/ptrace_broker.h
    linux/ptrace_client.cc
    linux/ptrace_client.h
    linux/ptrace_connection.h
    linux/ptracer.cc
    linux/ptracer.h
    linux/scoped_pr_set_dumpable.cc
    linux/scoped_pr_set_dumpable.h
    linux/scoped_pr_set_ptracer.cc
    linux/scoped_pr_set_ptracer.h
    linux/scoped_ptrace_attach.cc
    linux/scoped_ptrace_attach.h
    linux/socket.cc
    linux/socket.h
    linux/thread_info.cc
    linux/thread_info.h
    linux/traits.h
    misc/capture_context_linux.S
    misc/paths_linux.cc
    misc/time_linux.cc
    net/http_transport_socket.cc
    posix/process_info_linux.cc
    process/process_memory_linux.cc
    process/process_memory_linux.h
    process/process_memory_sanitized.cc
    process/process_memory_sanitized.h
  )
endif()

if(WIN32)
  target_sources(util
    PRIVATE
    file/directory_reader_win.cc
    file/file_io_win.cc
    file/filesystem_win.cc
    misc/clock_win.cc
    misc/paths_win.cc
    misc/time_win.cc
    net/http_transport_win.cc
    process/process_memory_win.cc
    process/process_memory_win.h
    synchronization/semaphore_win.cc
    thread/thread_win.cc
    win/address_types.h
    win/checked_win_address_range.h
    win/command_line.cc
    win/command_line.h
    win/context_wrappers.h
    win/critical_section_with_debug_info.cc
    win/critical_section_with_debug_info.h
    win/exception_handler_server.cc
    win/exception_handler_server.h
    win/get_function.cc
    win/get_function.h
    win/get_module_information.cc
    win/get_module_information.h
    win/handle.cc
    win/handle.h
    win/initial_client_data.cc
    win/initial_client_data.h
    win/loader_lock.cc
    win/loader_lock.h
    win/module_version.cc
    win/module_version.h
    win/nt_internals.cc
    win/nt_internals.h
    win/ntstatus_logging.cc
    win/ntstatus_logging.h
    win/process_info.cc
    win/process_info.h
    win/process_structs.h
    win/registration_protocol_win.cc
    win/registration_protocol_win.h
    win/safe_terminate_process.h
    win/scoped_handle.cc
    win/scoped_handle.h
    win/scoped_local_alloc.cc
    win/scoped_local_alloc.h
    win/scoped_process_suspend.cc
    win/scoped_process_suspend.h
    win/scoped_set_event.cc
    win/scoped_set_event.h
    win/session_end_watcher.cc
    win/session_end_watcher.h
    win/termination_codes.h
    win/xp_compat.h
    misc/capture_context_win.asm
    win/safe_terminate_process.asm
  )
endif()

add_executable(http_transport_test_server net/http_transport_test_server.cc)
crashpad_set_props(http_transport_test_server)
target_link_libraries(http_transport_test_server
  PRIVATE
  ZlibInterface
  util
  tool_support
  mini_chromium_base
  AppleFrameworks
  $<$<CXX_COMPILER_ID:MSVC>:ws2_32.lib>
)

crashpad_add_test(crashpad_util_test)
add_dependencies(crashpad_util_test http_transport_test_server)

target_sources(crashpad_util_test
  PRIVATE
  file/delimited_file_reader_test.cc
  file/directory_reader_test.cc
  file/file_io_test.cc
  file/file_reader_test.cc
  file/filesystem_test.cc
  file/string_file_test.cc
  misc/arraysize_test.cc
  misc/capture_context_test.cc
  misc/capture_context_test_util.h
  misc/clock_test.cc
  misc/from_pointer_cast_test.cc
  misc/initialization_state_dcheck_test.cc
  misc/initialization_state_test.cc
  misc/paths_test.cc
  misc/random_string_test.cc
  misc/range_set_test.cc
  misc/reinterpret_bytes_test.cc
  misc/scoped_forbid_return_test.cc
  misc/time_test.cc
  misc/uuid_test.cc
  net/http_body_gzip_test.cc
  net/http_body_test.cc
  net/http_body_test_util.cc
  net/http_body_test_util.h
  net/http_multipart_builder_test.cc
  net/url_test.cc
  numeric/checked_address_range_test.cc
  numeric/checked_range_test.cc
  numeric/in_range_cast_test.cc
  numeric/int128_test.cc
  process/process_memory_range_test.cc
  process/process_memory_test.cc
  stdlib/aligned_allocator_test.cc
  stdlib/map_insert_test.cc
  stdlib/string_number_conversion_test.cc
  stdlib/strlcpy_test.cc
  stdlib/strnlen_test.cc
  stdlib/thread_safe_vector_test.cc
  stream/base94_output_stream_test.cc
  stream/file_encoder_test.cc
  stream/log_output_stream_test.cc
  stream/test_output_stream.cc
  stream/test_output_stream.h
  stream/zlib_output_stream_test.cc
  string/split_string_test.cc
  synchronization/semaphore_test.cc
  thread/thread_log_messages_test.cc
  thread/thread_test.cc
  thread/worker_thread_test.cc
  net/http_transport_test.cc # remove for android later
)

if(UNIX)
  target_sources(crashpad_util_test
    PRIVATE
    posix/process_info_test.cc
    posix/signals_test.cc
    posix/symbolic_constants_posix_test.cc
    posix/scoped_mmap_test.cc
  )

  if(NOT APPLE)
    target_sources(crashpad_util_test
      PRIVATE
      linux/auxiliary_vector_test.cc
      linux/memory_map_test.cc
      linux/proc_stat_reader_test.cc
      linux/proc_task_reader_test.cc
      linux/ptrace_broker_test.cc
      linux/ptracer_test.cc
      linux/scoped_ptrace_attach_test.cc
      linux/socket_test.cc
      misc/capture_context_test_util_linux.cc
      process/process_memory_sanitized_test.cc
    )
  endif()
endif()

if(APPLE)
  target_sources(crashpad_util_test
    PRIVATE
    mac/launchd_test.mm
    mac/mac_util_test.mm
    mac/service_management_test.mm
    mac/xattr_test.cc
    mach/child_port_handshake_test.cc
    mach/child_port_server_test.cc
    mach/composite_mach_message_server_test.cc
    mach/exc_client_variants_test.cc
    mach/exc_server_variants_test.cc
    mach/exception_behaviors_test.cc
    mach/exception_ports_test.cc
    mach/exception_types_test.cc
    mach/mach_extensions_test.cc
    mach/mach_message_server_test.cc
    mach/mach_message_test.cc
    mach/notify_server_test.cc
    mach/scoped_task_suspend_test.cc
    mach/symbolic_constants_mach_test.cc
    misc/capture_context_test_util_mac.cc
    process/process_memory_mac_test.cc
  )
endif()

if(WIN32)
  target_sources(crashpad_util_test
    PRIVATE
    misc/capture_context_test_util_win.cc
    win/command_line_test.cc
    win/critical_section_with_debug_info_test.cc
    win/exception_handler_server_test.cc
    win/get_function_test.cc
    win/handle_test.cc
    win/initial_client_data_test.cc
    win/loader_lock_test.cc
    win/process_info_test.cc
    win/registration_protocol_win_test.cc
    win/safe_terminate_process_test.cc
    win/scoped_process_suspend_test.cc
    win/session_end_watcher_test.cc
  )
endif()

target_link_libraries(crashpad_util_test
  PRIVATE
  crashpad_test
  gmock
  gtest
  gtest_main
  crashpad_client
  crashpad_handler
  mini_chromium_base
  ZlibInterface
  $<$<CXX_COMPILER_ID:MSVC>:rpcrt4.lib>
  $<$<CXX_COMPILER_ID:MSVC>:dbghelp.lib>
)

if(WIN32)
  add_executable(crashpad_util_test_process_info_test_child win/process_info_test_child.cc)
  crashpad_set_props(crashpad_util_test_process_info_test_child)

  add_executable(crashpad_util_test_safe_terminate_process_test_child win/safe_terminate_process_test_child.cc)
  crashpad_set_props(crashpad_util_test_safe_terminate_process_test_child)

  add_library(crashpad_util_test_loader_lock_test MODULE win/loader_lock_test_dll.cc)
  crashpad_set_props(crashpad_util_test_loader_lock_test)
  target_link_libraries(crashpad_util_test_loader_lock_test PRIVATE util mini_chromium_base)
endif()

execute_process(
  COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_CURRENT_BINARY_DIR}/net/testdata
  COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_CURRENT_BINARY_DIR}/net
  COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/net/testdata ${CMAKE_CURRENT_BINARY_DIR}/net/testdata
)